# nestGate

./: .DOCS_CLEANUP_COMPLETE  .DOC_CLEANUP_SUMMARY  .FINAL_STATUS  .audit-complete  .audit_complete  .cleanup_complete  .docs-status  .documentation-status  .documentation_status  .env.test  .gate  .github-ready.txt  .github_docs_organized.txt  .gitignore  .llvm-cov.toml  .pre-commit-config.sh  .session_status  00_DOCUMENTATION_INDEX.md  00_EXECUTION_READY.md  00_MISSION_ACCOMPLISHED_NOV_29.md  00_READ_THIS_COMPREHENSIVE_AUDIT_COMPLETE.md  00_READ_THIS_FIRST.md  00_READ_THIS_FIRST_NOV_24.md  00_SESSION_SUMMARY_DEC_10_2025.md  00_START_HERE.md  00_START_HERE_NEXT_TIME.md  ACTIONABLE_ROADMAP_NOV_23_2025.md  ACTION_CHECKLIST_DEC_10_2025.md  ACTION_ITEMS_NOV_4_2025.md  ADVANCED_SYSTEMS_STATUS.md  ADVANCED_ZFS_IMPLEMENTATION_SUMMARY.md  ALL_WORK_COMPLETE_JAN_10_2026.md  ARCHITECTURE_CLARIFICATION.md  ARCHITECTURE_OVERVIEW.md  ARCHIVE_CLEANUP_ANALYSIS_JAN_26_2026.md  ARCHIVE_CLEANUP_AUDIT_JAN_27_2026.md  ARCHIVE_CLEANUP_COMPLETE_JAN_27_2026.md  ARCHIVE_CLEANUP_JAN_30_2026.md  ARCHIVE_CLEANUP_PLAN_JAN_27_2026.md  ARCHIVE_CLEANUP_PLAN_JAN_31_2026.md  (+710 more)
code/crates/nestgate-ai-models/: Cargo.toml
code/crates/nestgate-ai-models/src/: inference.rs  lib.rs  manager.rs  memory.rs  optimizer.rs  registry.rs  types.rs
code/crates/nestgate-api/: Cargo.toml  README.md  libmod.rlib  mod.long-type-10522541592456219572.txt  mod.long-type-14787614459489544876.txt  mod.long-type-16114894361773617955.txt  mod.long-type-16242768025299714682.txt  mod.long-type-16327472444679207759.txt  mod.long-type-16949016240188114098.txt  mod.long-type-17110055617609020418.txt  mod.long-type-17514968890088794382.txt  mod.long-type-18107267220100900668.txt  mod.long-type-2664059847649368078.txt  mod.long-type-4926090404075755788.txt  mod.long-type-8242948895314710531.txt
code/crates/nestgate-api/examples/: dev_server.rs  modern_nestgate_demo.rs  rpc_demo.rs  unix_socket_server.rs
code/crates/nestgate-api/examples-disabled-oct-20-2025/: dev_server.rs  rpc_demo.rs
code/crates/nestgate-api/src/: ai_first_wrapper.rs  api_coverage_boost.rs  api_coverage_tests.rs  byob.rs  config.rs  constants.rs  ecosystem_integration.rs  error.rs  error_comprehensive_tests.rs  event_coordination.rs  extended_coverage_tests.rs  lib.rs  mcp_streaming.rs  models.rs  nestgate_rpc_service.rs  nestgate_rpc_service_tests.rs  round6_final_coverage.rs  routes.rs  sse.rs  standards_integration_example.rs  standards_integration_example.rs.backup-20250912-064007  streaming_rpc.rs  tarpc_service.rs  types.rs  universal_adapter.rs  universal_adapter.rs.backup.20250730_130341  universal_ecosystem_implementation.rs  universal_primal.rs  universal_primal_config.rs  websocket.rs
code/crates/nestgate-api/tests/: auth_handlers_integration_tests.rs  chaos_tests.rs  comprehensive_handler_tests.rs  comprehensive_handler_tests.rs.disabled  critical_api_tests.rs  dashboard_types_comprehensive_new_tests.rs  dashboard_types_comprehensive_tests.rs  fault_injection_tests.rs  hardware_tuning_handlers_tests.rs.disabled  integration_tests.rs  (+10 more)
code/crates/nestgate-automation/: Cargo.toml
code/crates/nestgate-bin/: Cargo.toml
code/crates/nestgate-cache/: Cargo.toml
code/crates/nestgate-canonical/: Cargo.toml  README.md
code/crates/nestgate-config/: Cargo.toml
code/crates/nestgate-core/: Cargo.toml  README.md
code/crates/nestgate-discovery/: Cargo.toml
code/crates/nestgate-env-process-shim/: Cargo.toml
code/crates/nestgate-fsmonitor/: Cargo.toml
code/crates/nestgate-installer/: Cargo.toml
code/crates/nestgate-mcp/: Cargo.toml
code/crates/nestgate-middleware/: Cargo.toml
code/crates/nestgate-nas/: Cargo.toml
code/crates/nestgate-network/: Cargo.toml
code/crates/nestgate-observe/: Cargo.toml
code/crates/nestgate-orchestrator/: Cargo.toml  README.md  test-config.yaml
code/crates/nestgate-performance/: Cargo.toml
code/crates/nestgate-platform/: Cargo.toml
code/crates/nestgate-rpc/: Cargo.toml
code/crates/nestgate-security/: Cargo.toml
code/crates/nestgate-storage/: Cargo.toml
code/crates/nestgate-types/: Cargo.toml
code/crates/nestgate-ui/: Cargo.toml  DEMO.md  DEMO_INSTRUCTIONS.md  DEPRECATED.md  PORT_MANAGER_INTEGRATION.md  PR_DESCRIPTION.md  README.md  RUN_INSTRUCTIONS.md  UI_HALF_MARATHON_PROGRESS.md  babel.config.js  babel.config.json  craco.config.js  jest.config.js  jest.react.config.js  package.json  serve-demo.js  setup-jest.ts  tsconfig.json  tsconfig.spec.json
code/crates/nestgate-zfs/: Cargo.toml
fuzz/: .gitignore  Cargo.toml  crash-05cb1724e69867114b3621602d8fe056e72390b5  crash-09980779b7d08d38819a52d51c7a81fc3ba450d2  crash-0d9c90a58bc546c6c4e68f59e125a5a9e6e0061c  crash-28768517190ca274a9afca7f0741807d56d02c6f  crash-35f75f7b9723d890b8eba5b9a8abaf10e91beb4d  crash-3b787fa68f68328be27e92ea54a273aabce34226  crash-41409d724cd97212b7a00a5ce83daa6cd90004f9  crash-4cfcaf5c526a7155bdf81dfb87af8757c21e9fb4  crash-5c4aa511696598ffbe43cdbb99c03ac7104173e6  crash-66faee7e8f0d8a68cf92f75e10bd5198000a35c5  crash-6ec96ced3b23ff748a082c29e67d0814ecf8ba0d  crash-865ae9ccb5d14efb82af6d8a736595e4730640cf  crash-8791bf69f34cff6dbb9f7b794479d49c56c0cf9c  crash-879b78ca673a80d9b5fbc14ffa9ccf45d14be7e0  crash-ab76e9080ab02332d876faa8357fb5fee5131f2f  crash-c11969c5f773c962059269f8e6e445f30fe34976  crash-c78e502ad891f35f5f78de89fdd17778a61a75a7  crash-d25924c20cf4d3220f44387f5711ae1735c0902b
fuzz/fuzz_targets/: fuzz_api_endpoints.rs  fuzz_biomeos_manifests.rs  fuzz_config_parsing.rs  fuzz_network_protocols.rs  fuzz_path_validation.rs  fuzz_serialization.rs  fuzz_target_1.rs  fuzz_unified_config_example.rs  fuzz_universal_adapter.rs  fuzz_zfs_commands.rs
standalone-tests/: Cargo.toml
standalone-tests/src/: lib.rs
tools/unwrap-migrator/: Cargo.toml  README.md
tools/unwrap-migrator/src/: advanced_panic_migrator.rs  compilation_fixer.rs  context_fixer.rs  enhanced_migrator.rs  error_type_fixer.rs  main.rs  nestgate_patterns.rs  refined_nestgate_migrator.rs  reporter.rs  scanner.rs  systematic_migrator.rs  test_function_fixer.rs
(+19845 files in other folders)
