# NestGate - Production Ready Distributed Systems Framework
# Modernization Complete - January 2025

[package]
name = "nestgate"
version = "1.0.0"  # Major release - modernization complete
edition = "2021"
authors = ["NestGate Team"]
license = "AGPL-3.0-or-later"
description = "Production-ready distributed systems framework with zero-cost abstractions and unified architecture"
repository = "https://github.com/nestgate/nestgate"
keywords = ["distributed-systems", "zero-cost", "async", "storage", "framework"]
categories = ["network-programming", "filesystem", "web-programming::http-server"]

# This is a workspace-only package - no binary or lib

# Workspace configuration for all NestGate crates
[workspace]
members = [
    "code/crates/nestgate-core",
    "code/crates/nestgate-zfs", 
    "code/crates/nestgate-api", # Restored with canonical ZFS trait unification
    "code/crates/nestgate-network",
    "code/crates/nestgate-automation",
    "code/crates/nestgate-mcp",
    "code/crates/nestgate-bin",
    "code/crates/nestgate-fsmonitor",
    "code/crates/nestgate-installer", 
    "code/crates/nestgate-nas",
    "code/crates/nestgate-middleware",
    "code/crates/nestgate-performance", # Advanced performance optimization modules
    "fuzz",  # Fuzzing targets for comprehensive security testing
]
exclude = [
    "target",
    "specs",
    "docs",
]
resolver = "2"

# Workspace-wide linting configuration for maximum code quality
[workspace.lints.clippy]
# Core correctness - highest priority
correctness = { level = "deny", priority = -2 }
suspicious = { level = "deny", priority = -2 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Specific lints with standard priority
too_many_lines = { level = "warn", priority = -1 }

[workspace.lints.rust]
# Core safety requirements
unsafe_code = "deny"
missing_docs = "warn"  # Start with warnings
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_qualifications = "warn"
variant_size_differences = "warn"

[dependencies]
# Core dependencies for NestGate library
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true
axum.workspace = true
axum-test = "15.0"
reqwest.workspace = true

# Main binary depends on all crates
nestgate-core = { path = "code/crates/nestgate-core" }
nestgate-zfs = { path = "code/crates/nestgate-zfs" }
nestgate-api = { path = "code/crates/nestgate-api" } # Restored
nestgate-network = { path = "code/crates/nestgate-network" }
nestgate-automation = { path = "code/crates/nestgate-automation" }
nestgate-nas = { path = "code/crates/nestgate-nas" }
# nestgate-ui = { path = "code/crates/nestgate-ui" }  # DEPRECATED - headless design
nestgate-mcp = { path = "code/crates/nestgate-mcp" }
nestgate-installer = { path = "code/crates/nestgate-installer" }
nestgate-fsmonitor = { path = "code/crates/nestgate-fsmonitor" }
nestgate-middleware = { path = "code/crates/nestgate-middleware" }
nestgate-performance = { path = "code/crates/nestgate-performance" } # Advanced performance optimization
rand = "0.8"
regex = "1.0"
async-trait.workspace = true
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"
regex = "1.0"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
fastrand = "2.0"
sysinfo = "0.30"
num_cpus = "1.16"
criterion = { version = "0.5", features = ["html_reports"] }
async-trait.workspace = true
rand = "0.8"
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
uuid = { workspace = true, features = ["v4"] }

[features]
default = []
streaming-rpc = []
# **CANONICAL MODERNIZATION** - Advanced feature flags for conditional compilation
zero-cost-optimizations = []
advanced-monitoring = []
security-scanning = []
experimental-features = []

# Criterion benchmarks configuration
[[bench]]
name = "native_perf_test"
harness = false

[[bench]]
name = "decentralized_security_perf"
harness = false

[[bench]]
name = "nestgate_operations_perf"
harness = false

[[bench]]
name = "zero_copy_benchmarks"
harness = false

[workspace.dependencies]
# Shared dependencies for workspace members
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
warp = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
clap = { version = "4.0", features = ["derive"] }
tokio-test = "0.4"
indexmap = "2.0"
reqwest = { version = "0.11", features = ["json"] }
config = "0.14"
ipnetwork = "0.20"
criterion = { version = "0.5", features = ["html_reports"] }

# Version conflict resolution
axum-test = "15.7.4"      # Unified to latest version
getrandom = "0.2.16"      # Stable version alignment
http = "1.3.1"            # HTTP/1.1 compatible
hyper = "1.6.0"           # Latest stable hyper
tokio-serde = "0.9.0"     # Latest tokio-serde

# Note: criterion added for benchmarks

# Benchmark configuration
[[bench]]
name = "a_plus_performance_validation"
harness = false

[[bench]]
name = "zfs_performance_benchmarks"
harness = false

# Legacy lint configurations removed - all linting now handled by workspace.lints above

# Build optimization profiles
[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
# Optimized for production deployment
opt-level = 3
debug = false
split-debuginfo = "packed"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

[profile.test]
# Fast testing profile
opt-level = 0
debug = 2
split-debuginfo = "unpacked"
debug-assertions = true
overflow-checks = true
incremental = true
codegen-units = 256

[profile.bench]
# Optimized for accurate benchmarking
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
codegen-units = 1
incremental = false
