[package]
name = "nestgate"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
authors = ["ecoPrimals Collective"]
repository = "https://github.com/ecoprimals/nestgate"
homepage = "https://ecoprimals.org"
description = "NestGate - Sovereign Infrastructure Platform"
keywords = ["sovereignty", "zfs", "copyleft", "infrastructure"]
categories = ["network-programming", "filesystem", "web-programming"]

[dependencies]
nestgate-core = { path = "code/crates/nestgate-core" }
nestgate-canonical = { path = "code/crates/nestgate-canonical" }
tokio = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"], optional = true }
uuid = { workspace = true, features = ["v4", "serde"], optional = true }
libc.workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
num_cpus = "1.16"
anyhow = { workspace = true }
reqwest = { workspace = true }
# Additional test dependencies
tempfile = { workspace = true }
axum = { workspace = true }
axum-test = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
futures = { workspace = true }
# Concurrent test infrastructure
dashmap = { workspace = true }
once_cell = { workspace = true }
# Add workspace crates for integration tests
nestgate-zfs = { path = "code/crates/nestgate-zfs" }
nestgate-automation = { path = "code/crates/nestgate-automation" }
nestgate-nas = { path = "code/crates/nestgate-nas" }
nestgate-performance = { path = "code/crates/nestgate-performance" }
fastrand.workspace = true
criterion.workspace = true
rstest.workspace = true
test-log = "0.2.18"
temp-env = "0.3.6"
portpicker = "0.1.1"
base64.workspace = true

[features]
default = []
# Development stubs - include mock/stub implementations for testing
dev-stubs = ["nestgate-core/dev-stubs"]
# Streaming RPC - enable enhanced streaming capabilities
streaming-rpc = []
chrono = ["dep:chrono"]
uuid = ["dep:uuid"]

[workspace]
resolver = "2"
members = [
    "code/crates/nestgate-api",
    "code/crates/nestgate-zfs",
    "code/crates/nestgate-automation", 
    "code/crates/nestgate-bin",
    "code/crates/nestgate-canonical",
    "code/crates/nestgate-core",
    "code/crates/nestgate-fsmonitor",
    "code/crates/nestgate-installer",
    "code/crates/nestgate-mcp",
    "code/crates/nestgate-middleware",
    "code/crates/nestgate-nas",
    "code/crates/nestgate-network",
    "code/crates/nestgate-performance",
    "tools/unwrap-migrator",
    "fuzz"
]

# All ecoPrimals are AGPL-3.0-only (strictest copyleft)
# Humans get free use through beardog entropy systems
[workspace.package]
license = "AGPL-3.0-only"
authors = ["ecoPrimals Collective"]
repository = "https://github.com/ecoprimals/nestgate"
homepage = "https://ecoprimals.org"
keywords = ["sovereignty", "zfs", "copyleft", "infrastructure"]
categories = ["network-programming", "filesystem", "web-programming"]

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-test = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP and networking
axum = { version = "0.7", features = ["json", "tokio", "ws"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls-native-roots"], default-features = false }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
log = "0.4"

# Configuration and parsing
toml = "0.8"
config = "0.14"
regex = "1.10"

# Concurrency and performance
once_cell = "1.19"
lazy_static = "1.4"
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.12"

# Zero-copy and performance optimizations
bytes = "1.7"
memmap2 = "0.9"

# System utilities
libc = "0.2"
uzers = "0.11"
num_cpus = "1.16"
sysinfo = "0.30"
gethostname = "0.4"
dirs = "5.0"

# Crypto and encoding
base64 = "0.21"
md5 = "0.7"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2.0"

# Compression and utilities
flate2 = "1.0"
rand = "0.8"
fastrand = "2.0"
url = "2.4"

# Async utilities
futures = "0.3"
futures-util = "0.3"

# Testing and development
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

# CLI and command line
clap = { version = "4.0", features = ["derive"] }

# Additional utilities
walkdir = "2.0"

# Web framework and HTTP
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "0.14"
warp = "0.3"

# Streaming and async utilities
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# RPC and serialization
tarpc = { version = "0.34", features = ["tokio1", "serde-transport"] }
bincode = "1.3"

# Testing utilities
axum-test = "15.0"
mockall = "0.12"
rstest = "0.18"

# Network utilities
ipnetwork = "0.20"
tokio-tungstenite = "0.24"
tungstenite = "0.24"

# Additional utilities and data structures
indexmap = "2.0"
ahash = "0.8"
smallvec = "1.11"
arrayvec = "0.7"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = true
