[package]
name = "nestgate"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["ecoPrimals Collective"]
repository = "https://github.com/ecoprimals/nestgate"
homepage = "https://ecoprimals.org"
description = "NestGate - Sovereign Infrastructure Platform"
keywords = ["sovereignty", "zfs", "copyleft", "infrastructure"]
categories = ["network-programming", "filesystem", "web-programming"]

[dependencies]
nestgate-core = { path = "code/crates/nestgate-core" }
nestgate-canonical = { path = "code/crates/nestgate-canonical" }

[dev-dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tokio-test = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
# reqwest removed (BiomeOS Pure Rust Evolution)
# Additional test dependencies
tempfile = { workspace = true }
axum = { workspace = true }
axum-test = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
futures-util = { workspace = true }
# Concurrent test infrastructure
dashmap = { workspace = true }
serial_test = { workspace = true }
# once_cell removed: evolved to std::sync::LazyLock
# Add workspace crates for integration tests
nestgate-types = { path = "code/crates/nestgate-types" }
nestgate-zfs = { path = "code/crates/nestgate-zfs" }
nestgate-nas = { path = "code/crates/nestgate-nas" }
nestgate-performance = { path = "code/crates/nestgate-performance" }
fastrand.workspace = true
criterion.workspace = true
rstest.workspace = true
test-log = "0.2.18"
temp-env = { workspace = true }
portpicker = "0.1.1"
base64.workspace = true
bytes = { workspace = true }

[features]
default = []
# Development stubs - include mock/stub implementations for testing
dev-stubs = ["nestgate-core/dev-stubs", "nestgate-zfs/dev-stubs"]

[workspace]
resolver = "2"
members = [
    "code/crates/nestgate-types",
    "code/crates/nestgate-api",
    "code/crates/nestgate-zfs",
    "code/crates/nestgate-bin",
    "code/crates/nestgate-canonical",
    "code/crates/nestgate-cache",
    "code/crates/nestgate-config",
    "code/crates/nestgate-discovery",
    "code/crates/nestgate-env-process-shim",
    "code/crates/nestgate-core",
    "code/crates/nestgate-fsmonitor",
    "code/crates/nestgate-installer",

    "code/crates/nestgate-middleware",
    "code/crates/nestgate-nas",
    "code/crates/nestgate-observe",
    "code/crates/nestgate-performance",
    "code/crates/nestgate-platform",
    "code/crates/nestgate-rpc",
    "code/crates/nestgate-security",
    "code/crates/nestgate-storage",
    "tools/unwrap-migrator",
    "fuzz"
]

# All ecoPrimals are AGPL-3.0-or-later (strictest copyleft)
# Humans get free use through beardog entropy systems
[workspace.package]
license = "AGPL-3.0-or-later"
authors = ["ecoPrimals Collective"]
repository = "https://github.com/ecoprimals/nestgate"
homepage = "https://ecoprimals.org"
keywords = ["sovereignty", "zfs", "copyleft", "infrastructure"]
categories = ["network-programming", "filesystem", "web-programming"]

[workspace.dependencies]
# Core async runtime — minimal feature set (was "full")
tokio = { version = "1.0", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "signal",
    "sync",
    "test-util",
    "time",
] }
tokio-test = "0.4"

# Error handling and utilities
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"

# HTTP and networking
axum = { version = "0.7", features = ["json", "tokio", "ws"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "brotli"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }


# Configuration and parsing
toml = "0.8"
config = "0.14"
regex = "1.10"

# Concurrency and performance
dashmap = "6.1"
parking_lot = "0.12"
lru = "0.16"

# Zero-copy and performance optimizations
bytes = "1.7"


# System utilities (100% Pure Rust!)
uzers = "0.11"
sysinfo = "0.30"
rustix = { version = "0.38", default-features = false, features = ["std", "fs", "system"] }
etcetera = "0.8"

# Content-addressing (BLAKE3 for fetch_external provenance)
blake3 = "1.5"

# Encoding utilities (crypto ops delegated to bearDog via IPC)
base64 = "0.22"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
x509-parser = "0.17"
urlencoding = "2.0"
getrandom = "0.2"

# Compression and utilities
rand = "0.8"
fastrand = "2.0"
url = "2.5"

# Async utilities
async-trait = "0.1"
futures-util = "0.3"
async-recursion = "1.1"

# Testing and development
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
serial_test = "3.0"
temp-env = { version = "0.3.6", features = ["async_closure"] }

# CLI and command line
clap = { version = "4.5", features = ["derive"] }

# Additional utilities
walkdir = "2.0"

# Web framework and HTTP
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }

# Streaming and async utilities
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["codec"] }
tokio-serde = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# RPC and serialization
tarpc = { version = "0.34", features = ["tokio1", "serde-transport"] }
bincode = "1.3"
jsonrpsee = { version = "0.26.0", features = ["server"] }
# Testing utilities
axum-test = "15.0"
mockall = "0.13"
rstest = "0.18"


# Additional utilities and data structures
indexmap = "2.0"
ahash = "0.8"
smallvec = "1.11"
arrayvec = "0.7"

[lints]
workspace = true

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"
missing_docs = "warn"

[workspace.lints.clippy]
# Groups use lower priority so specific `allow`s below override members of `pedantic` / `nursery`.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
significant_drop_tightening = "allow"
unused_self = "allow"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "deny"
unimplemented = "deny"
cast_possible_truncation = "warn"
cast_sign_loss = "warn"
cast_precision_loss = "warn"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.test]
opt-level = 1
debug = true
