[package]
name = "nestgate-standalone-tests"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/eastgate/nestgate"
readme = "README.md"
description = "Standalone integration tests for NestGate"
keywords = [ "testing", "integration", "rust", "nestgate",]
categories = [ "development-tools", "testing",]

[workspace]
# Empty workspace to make this standalone

[dependencies]
serde_json = "1.0"
futures = "0.3"
tempfile = "3.0"
toml = "0.8"

[dev-dependencies]

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.tokio]
version = "1.0"
features = [ "full",]
