[[bin]]
name = "unwrap-migrator"
path = "src/main.rs"

[package]
name = "unwrap-migrator"
version = "0.3.0"
authors = ["NestGate Team", "Inspired by BearDog Team"]
description = "NestGate-specific context-aware unwrap/expect migration tool for eliminating panic sources"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/eastgate/nestgate"
readme = "README.md"
keywords = ["migration", "error-handling", "rust", "tooling"]
categories = ["development-tools", "rust-patterns"]

[dependencies]
regex = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
