[package]
name = "nestgate-ai-models"
version = "0.9.2"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "AI model integration for NestGate NAS system"
license = "MIT"
repository = "https://github.com/DataScienceBioLab/nestgate"
keywords = ["ai", "nas", "storage"]

[dependencies]
# Internal crates
nestgate-core = { path = "../nestgate-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# AI libraries
tch = { version = "0.13", features = ["download-libtorch"], optional = true }
ort = { version = "1.15", features = ["cuda"], optional = true }
ndarray = "0.15"

[features]
default = []
cuda = ["tch", "ort"]

[dev-dependencies]
tokio-test = { workspace = true }
mockall = "0.11" 