[package]
name = "nestgate-ai-models"
version = "0.1.0"
edition = "2021"
authors = ["DataScienceBioLab"]
description = "AI model management for NestGate storage optimization"
license = "MIT"
repository = "https://github.com/DataScienceBioLab/nestgate"
keywords = ["ai", "nas", "storage"]

[dependencies]
# Internal crates
nestgate-core = { path = "../nestgate-core" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging and tracing
tracing = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# AI libraries
tch = { version = "0.13", features = ["download-libtorch"], optional = true }
ort = { version = "1.15", features = ["cuda"], optional = true }
ndarray = "0.15"

# Additional dependencies
chrono = { workspace = true }
uuid = { workspace = true }

[features]
default = []
cuda = ["tch", "ort"]

[dev-dependencies]
tokio-test = { workspace = true }
mockall = "0.11"
tempfile = "3.10"

[lints]
workspace = true 