[package]
name = "nestgate-api"
version = "0.1.0"
edition = "2024"
authors = ["ecoPrimals Collective"]
description = "API server and interface definitions for NestGate with enhanced streaming capabilities"
license = "AGPL-3.0-or-later"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["api", "sovereignty", "network", "gateway", "infrastructure", "streaming", "rpc"]
categories = ["network-programming", "web-programming"]
homepage = "https://ecoprimals.org"

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-security = { path = "../nestgate-security" }
nestgate-zfs = { path = "../nestgate-zfs" }


axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures-util = { workspace = true }
async-recursion = { workspace = true }
tokio-stream = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
config = { workspace = true }
url = { workspace = true }
async-stream = { workspace = true }
fastrand = { workspace = true }
toml = { workspace = true }
sha2 = { workspace = true }
sysinfo = { workspace = true, optional = true }

tarpc = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
tokio-serde = { workspace = true, features = ["bincode"], optional = true }
tokio-util = { workspace = true, optional = true }

[dev-dependencies]
axum-test = { workspace = true }
tokio-test = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
serial_test = { workspace = true }
temp-env = { workspace = true }
tempfile = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["streaming-rpc"]
# ecoBin v3: sysinfo is a non-Linux fallback. Linux uses /proc via nestgate-platform.
streaming-rpc = ["tarpc", "bincode", "tokio-util", "tokio-serde"]
sysinfo = ["dep:sysinfo"]
dev-stubs = []
