[package]
name = "nestgate-automation"
version = "0.1.0"
edition = "2024"
description = "DEPRECATED — Automation/orchestration concerns delegated to biomeOS; zero production consumers remain"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["zfs", "automation", "ai", "storage", "tier-management"]
categories = ["development-tools", "automation"]

[features]
default = []

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }

serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
