[[bin]]
name = "nestgate"
path = "src/main.rs"
doc = false

[package]
name = "nestgate-bin"
version = "2.1.0"
edition = "2024"
description = "Main binary for NestGate NAS system - standalone distributed service"
license = "AGPL-3.0-only"
repository = "https://github.com/ecoprimals/nestgate"
keywords = ["rust", "nestgate", "core", "async"]
categories = ["development-tools"]

[lints]
workspace = true

[dependencies]
nestgate-core = { path = "../nestgate-core" }
nestgate-network = { path = "../nestgate-network" }
nestgate-api = { path = "../nestgate-api" }
nestgate-mcp = { path = "../nestgate-mcp" }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tarpc = { workspace = true, features = ["tokio1", "serde-transport", "serde-transport-json"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }

[features]
default = []
tarpc-server = []
